objects/WT_Contact_Center_Mulesoft__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>WT_Client_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Client_Secret__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Customer_Profile_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Profile URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WT_IDA_API_Acquirer_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA API Acquirer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_IDA_API_Client_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA API Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_IDA_API_Client_Secret__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA API Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_IDA_API_Config_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA API Config Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_IDA_API_Customer_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA API Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_IDA_API_Decision_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA API Decision URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WT_IDA_API_Instance_CD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA API Instance CD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_IDA_API_Product_CD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA API Product CD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_IDA_API_Product_Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA API Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_IDA_API_Token_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA API Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WT_IDA_API_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA API URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WT_Token_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WT_Transactions_API_Client_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transactions API Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Transactions_API_Client_Secret__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transactions API Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Transactions_API_Token_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transactions API Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WT_Transactions_API_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transactions API URL</label>
        <type>Url</type>
    </fields>
    <label>Contact Center Mulesoft</label>
</CustomObject>